# Deft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/layout/: imgui.ini
assets/shader/: default.frag  default.vert  frame_buffer.frag  frame_buffer.vert  light.frag
source/: CMakeLists.txt  application.cpp  application.h  main.cpp  window.cpp
source/deft/: CMakeLists.txt  application.cpp  application.h  camera_controller.cpp  camera_controller.h  deft.h  obj_loader.h  pch.h  window.cpp  window.h
source/deft/app/: application.cpp  application.h  window.cpp
source/deft/components/: component.h  renderable.h  transform.h
source/deft/controller/: camera_controller.cpp  camera_controller.h
source/deft/core/: application.cpp  application.h  entry_point.cpp  entry_point.h  layer.h  timer.h  window.cpp  window.h
source/deft/core/input/: input.cpp  input.h
source/deft/core/log/: log.cpp  log.h
source/deft/core/math/: math.h  matrix4.cpp  matrix4.h  quaternion.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
source/deft/ecs/: ecs.h
source/deft/ecs/components/: component.h  light.h  mesh.h  renderable.h  tag.h  transform.h
source/deft/ecs/system/: render_system.h
source/deft/gui/: gui.cpp  gui.h  hierarchy_panel.cpp  hierarchy_panel.h  log_panel.cpp  log_panel.h  menu_bar.h  properties_panel.cpp  properties_panel.h  scene_panel.cpp  scene_panel.h
source/deft/input/: input.cpp  input.h  input_manager.cpp  input_manager.h  key_code.h  mouse_button_code.h
source/deft/log/: log.cpp
source/deft/math/: base.h  math.h  matrix4.cpp  matrix4.h  quaternion.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp
source/deft/platform/render/opengl/: opengl_frame_buffer.cpp  opengl_frame_buffer.h  opengl_graphic_context.cpp  opengl_graphic_context.h  opengl_index_buffer.cpp  opengl_index_buffer.h  opengl_render_api.cpp  opengl_render_api.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_uniform_buffer.cpp  opengl_uniform_buffer.h  opengl_vertex_array.cpp  opengl_vertex_array.h  opengl_vertex_buffer.cpp  opengl_vertex_buffer.h
source/deft/render/: camera.cpp  camera.h  frame_buffer.cpp  frame_buffer.h  graphic_context.cpp  graphic_context.h  index_buffer.cpp  index_buffer.h  light.h  mesh.cpp  mesh.h  model.cpp  model.h  render_api.cpp  render_api.h  render_command.cpp  render_command.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
source/deft/scene/: box.cpp  box.h  scene.cpp  scene.h  scene_object.cpp  scene_object.h
source/deft/util/: obj_loader.h
source/editor/: CMakeLists.txt  editor.cpp  editor.h  editor_camera.h
source/editor/gui/: gui.cpp  gui.h  hierarchy_panel.cpp  hierarchy_panel.h  log_panel.cpp  log_panel.h  menu_bar.cpp  properties_panel.cpp  properties_panel.h  scene_panel.cpp  scene_panel.h
source/math/: base.h  matrix4.h  vector2.h  vector3.h  vector4.h
source/render/: graphic_context.cpp  graphic_context.h  shader.cpp  shader.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp
test/: CMakeLists.txt  math_test.cpp  obj_test.cpp  test.h
